After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684334 - atk-adaptor: don't emit a critical in case the bridge was not initialized
atk-adaptor: don't emit a critical in case the bridge was not initialized
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-atk
unspecified
Other All
: Normal normal
: ---
Assigned To: Li Yuan
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-09-18 23:13 UTC by Giovanni Campagna
Modified: 2013-03-21 10:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
atk-adaptor: don't emit a critical in case the bridge was not initialized (764 bytes, patch)
2012-09-18 23:13 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2012-09-18 23:13:19 UTC
Fixes running with NO_AT_BRIDGE=1
Comment 1 Giovanni Campagna 2012-09-18 23:13:21 UTC
Created attachment 224680 [details] [review]
atk-adaptor: don't emit a critical in case the bridge was not initialized
Comment 2 Matthias Clasen 2012-09-19 11:36:02 UTC
Worth a freeze break ?
Comment 3 Giovanni Campagna 2012-10-29 21:27:51 UTC
Not really, but it would be good to have in 3.7.
Comment 4 Mike Gorse 2012-10-29 21:44:13 UTC
Comment on attachment 224680 [details] [review]
atk-adaptor: don't emit a critical in case the bridge was not initialized

I apologize; I'd forgotten about this patch. It looks fine. Do you have commit access, or should I commit it?
Comment 5 Giovanni Campagna 2012-10-29 22:01:31 UTC
Attachment 224680 [details] pushed as 576a27a - atk-adaptor: don't emit a critical in case the bridge was not initialized
Comment 6 Jason Dokken 2013-03-21 08:51:19 UTC
Sorry, but am new to the GNome developer environment.  How do I obtain this patch?

Thanks,
Jason Dokken
Comment 7 Alejandro Piñeiro Iglesias (IRC: infapi00) 2013-03-21 10:06:44 UTC
(In reply to comment #6)
> Sorry, but am new to the GNome developer environment.  How do I obtain this
> patch?

There are two ways:

1. Giovanni Campagna uploaded that patch on the comment 1. That comment has a link to the patch.

2. In any bug at bugzilla, there is a table with all the attachments of the bug. You can find that table just below the box to add an "Additional comment". The header of that table is "Attachments"

Anyway, take into account that this patch is already committed (and the bug FIXED), so at-spi2-atk already has the changes that includes that patch.