atk-adaptor: don't emit a critical in case the bridge was not initialized

Fixes running with NO_AT_BRIDGE=1

https://bugzilla.gnome.org/show_bug.cgi?id=684334